	PR bootstrap/43121 	* except.c (sjlj_emit_function_enter): Don't call 	add_reg_br_prob_note, instead add REG_BR_PROB note to the last insn 	directly. 	* rtl.h (add_reg_br_prob_note): Remove prototype.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156913 138bc75d-0d04-0410-961f-82ee72b054a4